added method to get all experiments
